9.19. Executando e tratando a exception customizada de validações programáticas