@@ -1,5 +1,6 @@
 package com.erichiroshi.algafood.api.exceptionHandler;
 
+import com.erichiroshi.algafood.core.validation.ValidacaoException;
 import com.erichiroshi.algafood.domain.exception.EntidadeEmUsoExecption;
 import com.erichiroshi.algafood.domain.exception.EntidadeNaoEncontradaException;
 import com.erichiroshi.algafood.domain.exception.NegocioException;
@@ -43,15 +44,24 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
         this.messageSource = messageSource;
     }
 
+    @ExceptionHandler({ ValidacaoException.class })
+    public ResponseEntity<Object> handleValidacaoException(ValidacaoException ex, WebRequest request) {
+
+        return handleValidationInternal(ex, ex.getBindingResult(), new HttpHeaders(), HttpStatus.BAD_REQUEST, request);
+    }
 
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(
             MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
 
+        return handleValidationInternal(ex, ex.getBindingResult(), headers, status, request);
+    }
+
+    private ResponseEntity<Object> handleValidationInternal(
+            Exception ex, BindingResult bindingResult, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
+
         StandardErrorType errorType = StandardErrorType.DADOS_INVALIDOS;
         String detail = "Um ou mais campos estão inválidos. Faça o preenchimento correto e tente novamente.";
-
-        BindingResult bindingResult = ex.getBindingResult();
 
         List<StandardError.Object> errorObjects = bindingResult.getAllErrors().stream()
                 .map(objectError -> {
@@ -68,10 +78,11 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
                             .userMessage(message)
                             .build();
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         StandardError error = createStandardErrorBuilder(status, errorType, detail)
                 .userMessage(detail)
+                .path(((ServletWebRequest) request).getRequest().getRequestURI())
                 .objects(errorObjects)
                 .build();
 
